something strange oing on with grid.

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -20,6 +20,10 @@
   background-color: yellow;
 }
 
+.endNode {
+  background-color: red;
+}
+
 @keyframes clickCell {
   from {
     background-color: lightgray;
